--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/vitorxx1/Projeto-Prog-Web-Express#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
+    "js-sha256": "^0.9.0",
     "mongodb": "^4.6.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16"
   }
 }
